# py-optics

./: .flake8  .git-blame-ignore-revs  .gitignore  LICENSE.md  MANIFEST.in  README.md  changelog.md  pyproject.toml  setup.cfg
.github/workflows/: integrity_check.yml  test.yml
examples/: bl_splash.py  dipole_forces.py  fast_psf_calc_benchmark.py  mie_calc.py  mie_calc_forces.py  psf_example.py  trapping_fields.py  trapping_forces.py
fast_psf_calc/: czt.py  psf_calc.py
fast_psf_calc/tests/: benchmark.py
lumicks/pyoptics/: __about__.py
lumicks/pyoptics/field_distributions/: dipole.py
mie_calc/: legendre.py  mie_calc.py
mie_calc/examples/: examples.py
src/lumicks/pyoptics/: __about__.py  __init__.py  farfield.py  farfield_data.py  fresnel.py  objective.py
src/lumicks/pyoptics/czt/: czt.py
src/lumicks/pyoptics/farfield_transform/: __init__.py  czt.py  equivalence.py  nf2ff_currents.py  nf2ff_czt.py
src/lumicks/pyoptics/field_distributions/: __init__.py  dipole.py
src/lumicks/pyoptics/mathutils/: associated_legendre.py  czt.py  diskrule.py  integration.py  lebedev_laikov.py  vector.py  zernike.py
src/lumicks/pyoptics/mathutils/integration/: disk.py  lebedev_laikov.py  sphere.py  takaki.py
src/lumicks/pyoptics/psf/: __init__.py  czt.py  deprecated.py  direct.py  fast.py  quad.py  reference.py
src/lumicks/pyoptics/trapping/: __init__.py  associated_legendre.py  bead.py  data_lookup.py  debug.py  farfield_data.py  focused_field_calculation.py  implementation.py  integrate.py  interface.py  lebedev_laikov.py  legendre_data.py  local_coordinates.py  numba_implementation.py  numba_loop.py  objective.py  plane_wave_field_calculation.py  radial_data.py  thread_limiter.py
src/pyoptics/: __init__.py
src/pyoptics/fast_psf_calc/: __init__.py  czt.py
src/pyoptics/mie_calc/: __init__.py  associated_legendre.py  bead.py  hankel.py  implementation.py  interface.py  lebedev_laikov.py  legendre.py  legendre_calc.py  legendre_data.py  local_coordinates.py  mie_calc.py  objective.py  radial_data.py
tests/: test_objective.py
tests/examples/: test_examples.py
tests/farfield_transform/: test_czt_fft.py  test_equivalence.py  test_near_field_to_far_field_czt.py
tests/fast_psf_calc/: test_czt_gaussian.py  test_psf_gaussian.py
tests/field_distributions/: test_dipole_fields.py  test_electric_dipoles.py  test_magnetic_dipoles.py
tests/mathutils/: test_associated_legendre_mp.py  test_associated_legendre_np.py  test_cross.py  test_czt.py  test_integration.py  test_lebedev_laikov.py  test_vector.py  test_zernike.py
tests/mie_calc/: generate_benchmark_fields.py  test_associated_legendre.py  test_fields.py  test_force_dipole.py  test_mie_associated_legendre_mp.py  test_mie_associated_legendre_np.py  test_mie_calc.py  test_mie_calc_psf.py  test_mie_fields.py  test_mie_force_focus_dipole.py  test_mie_forces.py  test_mie_forces_plane_wave.py  test_mie_lebedev_laikov.py  test_mie_legendre.py  test_mie_plane_wave.py  test_mie_quasi_static.py  test_mie_scattering_absorption.py  test_plane_wave.py  test_quasi_static.py
tests/psf/: test_custom_dipole_psf.py  test_czt_gaussian.py  test_dipole_reference_psf.py  test_gaussian_reference_psf.py  test_paraxial_psf_reference.py  test_psf_api.py  test_psf_gaussian.py  test_psf_plane_wave.py  test_reference_dipole_psf.py
tests/trapping/: generate_benchmark_fields.py  test_associated_legendre_mp.py  test_associated_legendre_np.py  test_fields.py  test_force_focus_dipole.py  test_forces_plane_wave.py  test_interface.py  test_is_plane_wave.py  test_lebedev_laikov.py  test_mie_associated_legendre_np.py  test_mie_calc_psf.py  test_mie_is_plane_wave.py  test_mie_quasi_static.py  test_psf.py  test_quasi_static.py  test_scattering_absorption.py  test_trapping_api.py
