[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lumicks.pyoptics"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [
  { name = "Robert Moerland, LUMICKS B.V."},
  { email = "devteam@lumicks.com" },
]
description = "Computational code for nanophotonics"
readme = "README.md"
license = "Apache-2.0"
#license-files = ["LICEN[CS]E*"]
keywords = ["nanophotonics", "optical trapping", "point spread function", "optics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy >= 1.19.2",
  "scipy >= 1.6",
  "numba >= 0.57.0",
  "deprecated >= 1.2.18",
  "tbb; platform_machine=='x86_64' or platform_machine=='AMD64'"
]

[project.urls]
Homepage = "https://github.com/lumicks/py-optics"
Repository = "https://github.com/lumicks/py-optics.git"
Changelog = "https://github.com/lumicks/py-optics/blob/main/changelog.md"

[project.optional-dependencies]
examples =	["matplotlib >= 3.3.0", "notebook >= 6.0", "jupytext >= 1.5"]

[dependency-groups]
dev = ["matplotlib >= 3.3.0", "mpmath >= 1.3.0", "pytest >= 7.3.0", "ruff"]




[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
extend-ignore = ["E501", "E203", "E741", "B023"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.dynamic]
version = { attr = "lumicks.pyoptics.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["lumicks*"]
