[metadata]
name = lumicks.pyoptics
version = attr: lumicks.pyoptics.__version__

author = LUMICKS B.V.
author_email = devteam@lumicks.com

url = https://github.com/lumicks/py-optics
project_urls =
    Source = https://github.com/lumicks/py-optics

description = Computational code for nanophotonics
long_description = file: README.md
license_files = [LICENCE.md]

keywords = nanophotonics
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.10
install_requires =
    numpy>=1.19.2
    scipy>=1.6
    numba>=0.57.0
    tbb;platform_machine=='x86_64' or platform_machine=='AMD64'
    deprecated>=1.2.18
include_package_data = True
package_dir =
    =src
packages = find_namespace:

[options.extras_require]
examples =
	matplotlib>=3.3.0
    notebook>=6.0
    jupytext>=1.5
testing = 
	mpmath>=1.3.0
	pytest>=7.3.0

[options.packages.find]
where = src